updated #menu to avoid scrolling on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     display: flex;
     height: 100vh;
-    width: 100vw;
+    height: 100svh;
 }
 
 #menu-items {
